Sun Mar 18 00:39:23 GMT 2012  Dan Colish <dcolish@gmail.com>

	* tests/.gitignore,tests/soaktest/.gitignore: Add additional ignores
 	  for test artifacts

Fri Mar 16 05:23:54 GMT 2012  Olly Betts <olly@survex.com>

	* common/Makefile.mk: Missing part of previous change.

Fri Mar 16 04:59:53 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am,m4-macros/xapian.m4: Rename libxapian to libxapian-1.3
	  and xapian.m4 to xapian-1.3.m4.

Wed Mar 14 04:58:55 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS,tests/api_unicode.cc,unicode/tclUniData.cc: Update
	  Unicode character database to 6.1.0.

Wed Mar 14 02:23:27 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update for 1.3.0.

Tue Mar 13 07:44:32 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from 1.2.9 and ChangeLog.

Tue Mar 13 00:28:58 GMT 2012  Olly Betts <olly@survex.com>

	* docs/geospatial.rst: Fix typo - it's LatLongCoords::append() not
	  LatLongCoords::insert().

Mon Mar 12 23:14:20 GMT 2012  Olly Betts <olly@survex.com>

	* docs/admin_notes.rst: Fix typo - need "1.2.x" not "1.0.x" to get
	  both flint and chert support.

Mon Mar 12 11:54:19 GMT 2012  Olly Betts <olly@survex.com>

	* docs/Makefile.am: doxygen no longer generates any GIF files, so
	  stop trying to ship or install them.

Thu Mar 08 10:21:51 GMT 2012  Olly Betts <olly@survex.com>

	* docs/index.rst: Add link to new "getting started" guide.

Mon Mar 05 06:05:28 GMT 2012  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Fix curly double quote testcase.

Mon Mar 05 00:36:33 GMT 2012  Olly Betts <olly@survex.com>

	* matcher/: Fix issue with AND, OR, and XOR queries against a database
	  with no documents in it - this was causing a divide by zero, which led
	  to MSet::get_matches_estimated() reporting 2147483648 on i386.
	* tests/api_backend.cc: Add regression test emptydb1.

Sun Mar 04 23:05:17 GMT 2012  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Fix comment typo.
